💄 Styling | Fix broken style

--- a/src/components/BankAccount/BankAccount.module.css
+++ b/src/components/BankAccount/BankAccount.module.css
@@ -1,11 +1,3 @@
-.main {
-  flex: 1;
-}
-
-.bg-dark {
-  background-color: #12002b;
-}
-
 .account {
   display: flex;
   justify-content: space-between;
@@ -43,32 +35,29 @@
   flex: 1;
 }
 
-.edit-button {
+.transaction-button {
+  display: block;
+  width: 100%;
+  padding: 8px;
+  font-size: 1.1rem;
+  font-weight: bold;
+  margin-top: 1rem;
   border-color: #00bc77;
   background-color: #00bc77;
   color: #fff;
-  font-weight: bold;
-  padding: 10px;
+  text-decoration: none;
 }
 
-.header {
-  color: #fff;
-  margin-bottom: 2rem;
-}
+@media (min-width: 720px) {
+  .account {
+    flex-direction: row;
+  }
 
-.form-container {
-  display: inline-grid;
-  justify-content: center;
-  justify-items: center;
-  grid-template-columns: 1fr;
-  row-gap: 10px;
-}
+  .account-content-wrapper.cta {
+    flex: 0;
+  }
 
-.form-group {
-  display: flex;
-  gap: 10px;
-}
-
-.form-container input {
-  padding: 0.5em 1em;
+  .transaction-button {
+    width: 200px;
+  }
 }
