--- a/src/pages/SignIn/SignIn.module.css
+++ b/src/pages/SignIn/SignIn.module.css
@@ -1,10 +1,3 @@
-.flex {
-  margin: 0;
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh;
-}
-
 .bgdark {
   background-color: #12002b;
 }
