--- a/src/pages/Transaction/Transaction.module.css
+++ b/src/pages/Transaction/Transaction.module.css
@@ -29,7 +29,7 @@ ul {
 
 .transaction {
   padding: 7em 5em 2em;
-  background-color: #dfe6ed;
+  background-color: #12002b;
 }
 
 .transaction-infos {
